[project]
name = "code-interpreter"
version = "0.1.0"
description = "Standalone repo for the Object Oriented Agent Approach OPENAI-COOKBOOK example."
authors = [{name="Ryan Hennig"}]
dependencies = [
    "pandas>=1.3.0",
    "openai>=0.27.0",
    "dotenv"
]
[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["code_interpreter"]